[package]
name = "anynet"
version = "1.0.2"
edition = "2024"
description = "A Rust crate for inspecting local network interfaces and reporting active server ports at startup."
license = "MIT"
repository = "https://github.com/canmi21/anynet"
readme = "README.md"
keywords = ["network", "server", "startup", "print", "rust"]
categories = ["command-line-utilities", "network-programming", "web-programming", "development-tools"]

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
fancy-log = "0.1"
get_if_addrs = "0.5"
ip-lookup = "0.1"